# dmtx-utils

./: calculate_av_quality_score.py  generate_qr_coded_video.sh  installation_process
dmtxread/: Makefile.am  dmtxRGBread.c  dmtxread.h
